Fix label spacing

--- a/components/Experiences/components/ExperienceItem/ExperienceItem.css
+++ b/components/Experiences/components/ExperienceItem/ExperienceItem.css
@@ -15,7 +15,7 @@
 }
 
 .badge {
-  margin: 0 5px 5px 0;
+  margin: 0 10px 10px 0;
 }
 
 .badge:last-child {
